# codex-agent-swarm-lab

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  bootstrap.sh  importtime.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: LEVELS.md
docs/work_orders/: L0.md  L1.md
src/agent_lab/: __main__.py  artifacts.py  cli.py  l1_agent.py  l2_swarm.py
tests/: test_cli.py  test_l1_agent.py  test_l2.py
